testsuite/tests/parsing/dropped_attribute_ptyp_package.compilers.reference
module type T = sig type t end
Line 3, characters 22-29:
3 |   val foo : (module T [@attr] with type t = 'a) -> unit
                          ^^^^^^^
Error: invalid package type: an attribute cannot go here
Line 3, characters 33-40:
3 |   let foo (type a) (module M : T [@attr] with type t = a) = ()
                                     ^^^^^^^
Error: invalid package type: an attribute cannot go here

